-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.4.0-beta1
-
None
-
34702f8441cf890e08cbea91760615c188eac34d
TL;DR
In the preexisting (from a previous qt-creator installation) devices.xml file, the device's key Authentication had the value 3, which caused the problem mentioned in the summary.
<value type="int" key="Authentication">3</value>
That value worked fine until the moment I installed the new qt-creator version compiled from sources.
THE LONG STORY
I just compiled and installed qt creator from the master branch. Deploying files to a remote device with ssh, using user/password authentication, used to work before this new installation. Now, it gives the error illustrated in the summary. I can't exactly recall what the previous installed version was, however it too was compiled out of the master branch, about a couple months ago.
This is what I get:
12:11:46: The process "/usr/bin/make" exited normally.
12:11:46: Connecting to device...
12:11:47: Could not connect to host: SSH Protocol error: Server sent unexpected SSH_MSG_USERAUTH_PK_OK packet.Is the device connected and set up for network access?
12:11:47: Deploy step failed.
However, testing the ssh connection from the Configuration>Devices page works just fine.
Things work properly if I switch to the key pair authentication, uploading the proper public key to the device.
If I then go back to user/password, it works too.
Amazed, I experimented a bit and noticed that qt-creator had changed the value of the Authentication key in the devices.xml file from 3 to 4. In fact, playing with this value alone and reverting it to 3 makes the problem arise again.
I restate: I didn't put 3 there myself in the first place, it was put there by previous installations of qt-creator and that value worked just fine until the moment before the installation of the new version compiled out of the master branch. Nothing has changed, meanwhile, on the devices that would justify this behaviour.
I see that those values correspond to the types of authentications enumerated in the src/libs/ssh/sshconnection.h file, but I also see that that file hasn't changed in many months. I was not able to figure out, in the little amount of time I could dedicate to the issue, what change in the source code might have made this issue arise.
For Gerrit Dashboard: QTCREATORBUG-18235 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
195290,2 | SSH: Fix enum values | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |