SSH: Fix enum values

Newly introduced enum values need to get a higher value than the
existing ones of the same type. Otherwise such values will be
interpreted wrongly when loaded from settings created by earlier
versions of Qt Creator.

Task-number: QTCREATORBUG-18235
Change-Id: I0f8497352d1ef382b5c8a65db4e1dea20b6296da
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>