src/libs/ssh/sshconnection.h
@@ -65,11 +65,12 @@ public:
     enum AuthenticationType {
         AuthenticationTypePassword,
         AuthenticationTypePublicKey,
-        AuthenticationTypeAgent,
         AuthenticationTypeKeyboardInteractive,
 
         // Some servers disable "password", others disable "keyboard-interactive".
-        AuthenticationTypeTryAllPasswordBasedMethods
+        AuthenticationTypeTryAllPasswordBasedMethods,
+
+        AuthenticationTypeAgent,
     };
 
     SshConnectionParameters();
